--- a/src/Modules/Laser.Orchard.WebServices/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.WebServices/App_Data/Localization/it-IT/orchard.module.po
@@ -52,6 +52,18 @@ msgctxt "Laser.Orchard.WebServices.Controllers.TermsController"
 msgid "Missing Icon field in Term Part."
 msgstr "Campo Icona assente per il termine."
 
+msgctxt "Laser.Orchard.WebServices.Drivers.gets"
+msgid "Action Name is duplicate: {0}"
+msgstr "Il nome della action è duplicato: {0}"
+
+msgctxt "Laser.Orchard.WebServices.Drivers.gets"
+msgid "Action Name is required."
+msgstr "Il nome della Action è obbligatorio."
+
+msgctxt "Laser.Orchard.WebServices.Drivers.gets"
+msgid "Failed to parse the json."
+msgstr "Impossibile interpretare il json."
+
 msgctxt "Laser.Orchard.WebServices.Navigation.CustomRestApiSettingsAdminMenu"
 msgid "Custom REST API"
 msgstr "REST API Custom"
